# mathmodel_agent

./: .gitignore  README.md  pyproject.toml
config/: llm.example.json
data/: mathagent.db  mathagent.db-journal  orchestrator.db-journal  sqlite_probe.db  sqlite_probe.db-journal  test_direct_path.db-journal  test_inline.db  test_inline.db-journal  test_llm_config.json  test_memory.db  test_memory.db-shm  test_memory.db-wal  test_orchestrator.db-journal  test_orchestrator_repro.db-journal  test_smoke.db  test_smoke.db-shm  test_smoke.db-wal  test_workflow_modeling.db-journal  test_workflow_upgrade.db-journal
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css  types.ts
inputs/: README.md
outputs/: README.md  chat_report.md  chat_transcript.md  report_issues_from_images.json  session_659e8d68_report_issues.json  session_659e8d68_report_issues_clean.json
outputs/check_llm/: report.md
outputs/demo_llm/: problem_text.md
problems/: README.md
templates/: report_outline.md
tests/: test_coding_resilience.py  test_coding_strategy.py  test_custom_http.py  test_inline.db-journal  test_llm_config.py  test_memory_store.py  test_openai_compat.py  test_pdf_loader.py  test_problem_analysis.py  test_prompts.py  test_python_exec_tool.py  test_report_fallback.py  test_report_sections.py  test_report_sections_numbered.py  test_smoke.py  test_solver_registry.py  test_solver_templates.py  test_supporting_data.py  test_verification_summary.py  test_web_service.py  test_workflow_upgrade.py
(+369 files in other folders)
